--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         </nav>
         
         <div class="section-container"> <!-- To create "Section" for making dropdown list, the users can choose menus --> 
-            <div class="about-web">
-                <h2> Om Konferensen <img src="img/title-pacman.png" width="80px" height="80px" alt=""></h2> <!-- Konferensinformation -->
+            <div class="title-menu">
+                <div class="title-name"><h2> Om Konferensen <img src="img/title-pacman.png" alt=""></h2></div>
+            </div>
+            <div class="about-web"> <!-- Konferensinformation -->
                 <p> <img src="img/october.png" alt=""> Datum: 18 - 20 oktober 2024 </p>
                 <p> <img src="img/gps.png" alt=""> Plats: Göteborgs Konferenscenter </p>
                 <p class="about-conference"> Välkommen till årets största konferens om frontendutveckling! Under tre dagar kan du lära dig om de senaste trenderna inom webbutveckling, design och användarupplevelse (UX) genom över 10 seminarier med experter. 
@@ -38,7 +40,9 @@
 
             <!-- Section: Seminarier -->
             <section id="seminars">
-                <h2> Seminarier <img src="img/title-redghost.png" width="60px" height="60px" alt=""></h2>
+                <div class="title-menu">
+                    <div class="title-name"><h2> Seminarier <img src="img/title-redghost.png" alt=""></h2></div>
+                </div>
                 <p class="about-seminars"> Program för Konferens om Frontendutveckling </p>
                 <div class="seminarier-box">
                     <div class="seminarier-box1"> <!-- Day 1 -->
@@ -79,7 +83,9 @@
 
             <!-- Section: Anmälan -->
             <section id="signup">
-                <h2> Anmälan <img src="img/title-blueghost.png" width="50px" height="50px" alt=""></h2>     
+                <div class="title-menu">
+                    <div class="title-name"><h2> Anmälan <img src="img/title-blueghost.png" alt=""></h2> </div>
+                </div>    
                 <div class="signup-container">
                     <div class="signup-form"> <!-- Signup-form -->
                         <p> Fyll i formuläret nedan för att anmäla dig till konferensen. </p> 
@@ -154,9 +160,10 @@
 
             <!-- Section: Priser för biljetter -->
             <section id="price">
-                <!-- Tickets price & details -->
-                <h2> Priser för biljetter <img src="img/title-pinkghost.png" width="60px" height="50px" alt=""></h2>
-                <div class="price-form">
+                <div class="title-menu">
+                    <div class="title-name"><h2> Priser för biljetter <img src="img/title-pinkghost.png" alt=""></h2></div>
+                </div> 
+                <div class="price-form"> <!-- Tickets price & details -->
                     <div class="ticket-price">
                         <div class="ticket"> <!-- Ticket price for 1 day -->
                             1-dagsbiljett: <span class="price-ticket">1500 SEK</span>
@@ -214,7 +221,10 @@
 
             <!-- Section: Kontakta oss -->
             <section id="contact">
-                <h2> Kontakta oss <img src="img/title-yellowghost.png" width="50px" height="50px" alt=""></h2>
+                <div class="title-menu">
+                    <div class="title-name"><h2> Kontakta oss <img src="img/title-yellowghost.png" alt=""></h2></div>
+                </div>
+                
                 <div class="contact-container">
                     <div class="contact-betterweb">
                         <p> Bättre Webb 2024 </p>
