Fixed transition and transform

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <input class="submit" type="submit">
                         </fieldset> 
                             <div class="allergies-text">
-                                <div class="allergies-text1"><img src="img/food-allergy.png" width="150px" height="150px"></div>
+                                <div class="allergies-text1"><img src="img/food-allergy.png" alt=""></div>
                                 <div class="allergies-text1">
                                     <p> Medicinskt larm allergier! </p>
                                     <p> Vänligen skriv ner eventuella matallergier för att säkerställa en säker matupplevelse för alla. </p>
@@ -223,8 +223,7 @@
             <section id="contact">
                 <div class="title-menu">
                     <div class="title-name"><h2> Kontakta oss <img src="img/title-yellowghost.png" alt=""></h2></div>
-                </div>
-                
+                </div> 
                 <div class="contact-container">
                     <div class="contact-betterweb">
                         <p> Bättre Webb 2024 </p>
@@ -251,7 +250,7 @@
                         <div class="person">
                             <ul>
                                 <li> Teknisk chef </li>
-                                <li><img src="img/title-pacman.png" alt=""></li>
+                                <li><img src="img/M.png" width="200px" height="200px"></li>
                                 <li> Mattias Karlsson </li>
                                 <li> E-post: <a href="mailto:mattias.karlsson@battrewebb2024.se"> mattias.karlsson@battrewebb2024.se </a></li> 
                                 <li> Telefon: +46 70 984 8468 </li>
