--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <main>
         <nav class="side-nav"> <!-- Create "nav" to display various menus -->
             <ul>
-                <li><a href="#home"> <img src="img/pacman.png" width="50px" height="50px" alt=""> Hem </a></li>
-                <li><a href="#seminars"> <img src="img/ghost-red.png" width="60px" height="50px alt="> <br> Seminarier </a></li>
-                <li><a href="#signup"> Anmälan <img src="img/ghost-blue.png" width="55px" height="50px" alt=""></a></li>
-                <li><a href="#price"> <img src="img/ghost-pink.png" width="60px" height="50px" alt=""> Priser & biljetter </a></li>
-                <li><a href="#contact"> Kontakta oss <br><img src="img/ghost-yellow.png" width="60px" height="50px" alt=""></a></li>
+                <li><a href="#home"> <img src="img/pacman.png" alt=""> Hem </a></li>
+                <li><a href="#seminars"> <img src="img/ghost-red.png" alt=""> <br> Seminarier </a></li>
+                <li><a href="#signup"> Anmälan <img src="img/ghost-blue.png" alt=""></a></li>
+                <li><a href="#price"> <img src="img/ghost-pink.png" alt=""> Priser & biljetter </a></li>
+                <li><a href="#contact"> Kontakta oss <br><img src="img/ghost-yellow.png" alt=""></a></li>
             </ul>
         </nav>
         
@@ -41,7 +41,7 @@
             <!-- Section: Seminarier -->
             <section id="seminars">
                 <div class="title-menu">
-                    <div class="title-name"><h2> Seminarier <img src="img/title-redghost.png" alt=""></h2></div>
+                    <div class="title-name"><h2><img src="img/packman-menu.png" alt=""> Seminarier <img src="img/title-redghost.png" alt=""></h2></div>
                 </div>
                 <p class="about-seminars"> Program för Konferens om Frontendutveckling </p>
                 <div class="seminarier-box">
@@ -84,7 +84,7 @@
             <!-- Section: Anmälan -->
             <section id="signup">
                 <div class="title-menu">
-                    <div class="title-name"><h2> Anmälan <img src="img/title-blueghost.png" alt=""></h2> </div>
+                    <div class="title-name"><h2><img src="img/packman-menu.png" alt=""> Anmälan <img src="img/title-blueghost.png" alt=""></h2> </div>
                 </div>    
                 <div class="signup-container">
                     <div class="signup-form"> <!-- Signup-form -->
@@ -118,16 +118,16 @@
                             <form action="#" method="POST"> <!-- Fake link -->
                                 <label for="food-menu"> <img class="img-food" src="img\food.png" alt=""> Vegetarisk & Kött alternativ (Välj 3):</label>
                                 <select name="food-menu" id="food-menu">
-                                    <option value="Vegetarisk-meny"> Grönsaksquiche (Vegetarisk meny) </option>
-                                    <option value="Vegetarisk-meny"> Kikärtsbiffare (Vegetarisk meny) </option>
-                                    <option value="Vegetarisk-meny"> Rostad grönsakssallad (Vegetarisk meny) </option>
-                                    <option value="Vegetarisk-meny"> Quinoasallad (Vegetarisk meny) </option>
-                                    <option value="Vegetarisk-meny"> Linssallad (Vegetarisk meny) </option>
-                                    <option value="Köttmeny"> Kycklingfilé (Köttmeny) </option>
-                                    <option value="Köttmeny"> Köttbullar i gräddsås (Köttmeny) </option>
-                                    <option value="Köttmeny"> Fläskkotlett (Köttmeny) </option>
-                                    <option value="Köttmeny"> Lammköttbullar (Köttmeny) </option>
-                                    <option value="Köttmeny"> Pasta med köttfärssås (Köttmeny) </option>
+                                    <option value="Vegetarisk-meny"> (Vegetarisk meny) Grönsaksquiche </option>
+                                    <option value="Vegetarisk-meny"> (Vegetarisk meny) Kikärtsbiffare </option>
+                                    <option value="Vegetarisk-meny"> (Vegetarisk meny) Rostad grönsakssallad </option>
+                                    <option value="Vegetarisk-meny"> (Vegetarisk meny) Quinoasallad </option>
+                                    <option value="Vegetarisk-meny"> (Vegetarisk meny) Linssallad </option>
+                                    <option value="Köttmeny"> (Köttmeny) Kycklingfilé </option>
+                                    <option value="Köttmeny"> (Köttmeny) Köttbullar i gräddsås </option>
+                                    <option value="Köttmeny"> (Köttmeny) Fläskkotlett </option>
+                                    <option value="Köttmeny"> (Köttmeny) Lammköttbullar </option>
+                                    <option value="Köttmeny"> (Köttmeny) Pasta med köttfärssås </option>
                                 </select>
                             </form>
                             <form action="#" method="POST"> 
@@ -146,7 +146,7 @@
                             <div class="allergies-text">
                                 <div class="allergies-text1"><img src="img/food-allergy.png" alt=""></div>
                                 <div class="allergies-text1">
-                                    <p> Medicinskt larm allergier! </p>
+                                    <h3> Medicinskt larm allergier!</h3>
                                     <p> Vänligen skriv ner eventuella matallergier för att säkerställa en säker matupplevelse för alla. </p>
                                     <p> Tack för ert samarbete! </p>
                                 </div>
@@ -161,7 +161,7 @@
             <!-- Section: Priser för biljetter -->
             <section id="price">
                 <div class="title-menu">
-                    <div class="title-name"><h2> Priser för biljetter <img src="img/title-pinkghost.png" alt=""></h2></div>
+                    <div class="title-name"><h2><img src="img/packman-menu.png" alt=""> Priser för biljetter <img src="img/title-pinkghost.png" alt=""></h2></div>
                 </div> 
                 <div class="price-form"> <!-- Tickets price & details -->
                     <div class="ticket-price">
@@ -191,15 +191,15 @@
                                 <legend> Vilka dagar ska du delta? </legend> <!-- Using "legend" for explaining the title -->
                                 <div class="checkbox-label">
                                     <input type="checkbox" id="day1" name="days" value="18">
-                                    <label for="day1">18 Oktober 2024</label>
+                                    <label for="day1"> 18 Oktober 2024</label>
                                 </div>
                                 <div class="checkbox-label">
                                     <input type="checkbox" id="day2" name="days" value="19">
-                                    <label for="day2">19 Oktober 2024</label>
+                                    <label for="day2"> 19 Oktober 2024</label>
                                 </div>
                                 <div class="checkbox-label">
                                     <input type="checkbox" id="day3" name="days" value="20">
-                                    <label for="day3">20 Oktober 2024</label>
+                                    <label for="day3"> 20 Oktober 2024</label>
                                 </div>
                             </fieldset>
                             <!-- Submit button button for buying the tickets -->
@@ -222,7 +222,7 @@
             <!-- Section: Kontakta oss -->
             <section id="contact">
                 <div class="title-menu">
-                    <div class="title-name"><h2> Kontakta oss <img src="img/title-yellowghost.png" alt=""></h2></div>
+                    <div class="title-name"><h2><img src="img/packman-menu.png" alt=""> Kontakta oss <img src="img/title-yellowghost.png" alt=""></h2></div>
                 </div> 
                 <div class="contact-container">
                     <div class="contact-betterweb">
@@ -259,7 +259,7 @@
                     </div>
                     <div class="contact-info"> <!-- Contact informations -->
                         <ul>
-                            <h3> Kontaktinformation </h3>
+                            <h2> Kontaktinformation </h2>
                             <li><img src="img/www.png" alt=""> <a href="http://www.battrewebb2024.se"> www.battrewebb2024.se </a></li>
                             <li><img src="img/email.png" alt=""> <a href="mailto:info@battrewebb2024.se"> info@battrewebb2024.se </a></li>
                             <li><img src="img/address.png" alt=""> Svenska Mässan, Mässans Gata 24, 412 51 Göteborg, Sverige </li>
@@ -267,7 +267,7 @@
                     </div>
                     <div class="social-media"> <!-- Social media -->
                         <ul>
-                            <h3> Följ oss </h3>
+                            <h2> Följ oss </h2>
                             <li><img src="img/twitter.png" alt=""> <a href="https://twitter.com/BättreWebb2024"> @BättreWebb2024 </a></li>
                             <li><img src="img/linkedin.png" alt=""> <a href="https://linkedin.com/company/battrewebb2024"> linkedin.com/company/battrewebb2024 </a> </a></li>
                             <li><img src="img/instagram.png" alt=""> <a href="https://instagram.com/battrewebbconf"> @battrewebbconf </a></li>
